# brainy_retina

./: .clang-format  .gitignore  CMakeLists.txt  README.md  export.h  gpuretinaConfig.cmake.in  gpuretinaConfigVersion.cmake.in
dockerfiles/: dev_dockerfile
example/: main.cpp  utils.h
scripts/: start_dev.sh
src/: RetinaCudaException.hpp  retinacuda.cpp  retinacuda.h
src/Cuda/: cuda_arrays.cpp  cuda_arrays.h  cuda_image.h  cuda_retina_kernels.cuh  declaration_helper.cuh  host_arrays.cpp  host_arrays.h  kernels.cu  retinastructs.h
src/Utils/: Random.h  arrays.cpp  arrays.h  colormap.h  convertion.h  dimensions.cpp  dimensions.h  elapsedtimer.cpp  elapsedtimer.h  filesystemtools.h  interp_utils.h  logger.cpp  logger.h  polar_utils.h  ramp_utils.h  stdutils.cpp  stdutils.h  types.h  variant.cpp  variant.h
src/Utils/nonstd/: variant.hpp
src/data/: data.h
src/gpu/: cuda_retina_kernels.cuh  declaration_helper.cuh  kernels.cu  retinastructs.h
src/layers/: ConeLayer.cpp  ConeLayer.h  MGCellLayer.cpp  MGCellLayer.h  PGCellLayer.cpp  PGCellLayer.h
src/simulations/: ConeModel.h  ConeModelConfig.h  DensityFunction.h  EccentricityModelInterface.h  GCellsModel.h  GenericEccentricityModel.h  GenericModel.h  MGCellsSim.h  ModelInterface.h  PGCellsModel.h  PixelConeModel.h  PixelConeModelConfig.h
src/utils/: Random.h  colormap.h  convertion.h  elapsedtimer.cpp  elapsedtimer.h  filesystemtools.h  interp_utils.h  polar_utils.h  ramp_utils.h
tests/opencv/: main.cpp
utils/: find_polynomial_approx.py
